--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="main-header">
             <div class="layers">
                 <div class="layer_header">
-                    <div class="layers_caption">Welcome</div>
+                    <div class="layers_caption">Welcome to Florø</div>
                     <div class="layers_title">Solbakken asylmottak</div>
                 </div>
                     <div class="layer layers_base" style="background-image: url(img/base1.png);"></div>
